k8s/infra/base/network/dns/adguard/default-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: dns
spec:
  description: 'Default deny with essential allowances'
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toFQDNs:
        - matchPattern: '*.kube.pc-tips.se'
